[project]
name = "comfyui-img_query"
description = "Nodes:ImageRequestNode"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/chandlergis/ComfyUI-IMG_Query"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-IMG_Query"
Icon = ""
